# linkedin_ai_agent

./: .gitignore  debug_scraper.py  inspect_container.py  migrate_add_created_at.py  pyproject.toml  scraper.py  streamlit_app.py  test_playwright.py
app/: main.py
app/api/routes/: review_routes.py
app/automation/: linkedin_publisher.py  linkedin_scraper.py
app/core/: config.py  tracing.py
app/db/: init_db.py  session.py
app/db/models/: creator_profile_model.py  discovered_post_model.py  generated_comment_model.py  post_model.py  workflow_run_model.py
app/prompts/: critique_prompts.py  draft_prompts.py  rewrite_prompts.py  topic_prompts.py
app/schemas/: evaluation_schema.py
app/services/: llm_service.py  post_service.py  publish_service.py  validator_service.py  workflow_service.py
app/style_examples/: linkedin_style.txt
app/tools/: research_tool.py
app/utils/: style_loader.py
app/workflows/graphs/: linkedin_graph.py
app/workflows/nodes/: critique_node.py  draft_node.py  research_ai_node.py  research_node.py  research_startup_node.py  research_tools_node.py  rewrite_node.py  save_node.py  topic_node.py  validation_node.py
app/workflows/nodes/comments/: discovery_node.py  relevance_node.py
app/workflows/state/: comment_state.py  linkedin_state.py
