[project]
name = "linkedin-ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = ["fastapi (>=0.136.1,<0.137.0)", "uvicorn (>=0.46.0,<0.47.0)", "langgraph (>=1.1.10,<2.0.0)", "langchain (>=1.2.18,<2.0.0)", "pydantic (>=2.13.4,<3.0.0)", "sqlalchemy (>=2.0.49,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)", "langchain-groq (>=1.1.2,<2.0.0)", "playwright (>=1.59.0,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
